--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
   "content_scripts": [
     {
       "matches": ["https://chat.openai.com/*"],
-      "js": ["content.js"],
+      "js": ["./scripts/content.js"],
       "run_at": "document_end"
     }
   ]
