--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 3,
-  "name": "ChatGPT Down & Up",
+  "name": "ChatterKeep",
   "author": "Eun",
   "version": "1.0",
-  "description": "Extracts Q&A content from ChatGPT and upload file to ChatGPT.",
+  "description": "An extension that allows you to save conversation and upload files.",
   "permissions": [
     "tabs",
     "activeTab",
@@ -16,8 +16,11 @@
   "content_scripts": [
     {
       "matches": ["https://chat.openai.com/*"],
-      "js": ["./scripts/content.js"],
+      "js": ["./scripts/simsunb-normal.js", "./scripts/jspdf.umd.min.js", "./scripts/content.js"],
       "run_at": "document_end"
     }
-  ]
+  ],
+  "icons": {
+    "48": "./image/icon.png"
+  }
 }
