--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
   "content_scripts": [
     {
       "matches": ["https://chat.openai.com/*"],
-      "js": ["./scripts/simsunb-normal.js", "./scripts/jspdf.umd.min.js", "./scripts/content.js"],
+      "js": ["./scripts/simhei-normal.js", "./scripts/jspdf.umd.min.js", "./scripts/content.js"],
       "run_at": "document_end"
     }
   ],
