--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,7 @@
     {
       "matches": ["https://chat.openai.com/*"],
       "js": [
+        "./scripts/pdf.min.js",
         "./scripts/popup.js",
         "./scripts/promptDatas.js",
         "./scripts/prompts.js", 
