--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "manifest_version": 3,
   "name": "ChatterKeep",
   "author": "Eun",
-  "version": "2.3.3",
-  "description": "An extension that allows you to save conversation and upload files.",
+  "version": "2.3.5",
+  "description": "An extension that includes functions such as offering Chinese and English prompts, downloading conversations, and uploading files.",
   "permissions": [
     "activeTab"
   ],
